<resources>
    <string name="app_name">Printing Shop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_upload">Upload</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_home1">Printing Shop Mobile App</string>
    <string name="menu_appInfo">App Info</string>
    <string name="menu_account">Account</string>
    <string name="menu_history">History</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_logout">Log Out</string>
    <string name="upload">UPLOAD</string>
    <string name="announcement">ANNOUNCEMENT</string>
    <string name="contact">CONTACT</string>
    <string name="feedback">FEEDBACK</string>
    <string name="write_down">Write down your feedback...</string>
    <string name="clear">CLEAR</string>
    <string name="submit">SUBMIT</string>
    <string name="satisfied">How satisfied are you with this mobile app?</string>
    <string name="address">Address</string>
    <string name="empty">XXXXXX</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="no_account">Don\'t hava an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="register">Register New Account</string>
    <string name="SIGN_UP">SIGN UP</string>
    <string name="txtAnnouncement">This is Announcement page</string>
    <string name="txtUpload">This is Upload page</string>
    <string name="return_login_text">Return Login Page</string>
    <string name="txt_btnEdit">Edit</string>
    <string name="txt_btnSave">Save</string>
</resources>
