<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_app_info"
            android:icon="@drawable/ic_error_black_24dp"
            android:title="@string/menu_appInfo" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_user_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_history" />
    </group>

    <item android:title="Personalize">
        <menu>
            <item
                android:id="@+id/nav_change_password"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_change_password" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
