<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#233248">

        <EditText
            android:id="@+id/login_username"
            android:layout_width="331dp"
            android:layout_height="53dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="#96ACAA"
            android:textColorHint="#96ACAA"
            app:layout_constraintBottom_toTopOf="@+id/login_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="331dp"
            android:layout_height="53dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="21dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#96ACAA"
            android:textColorHint="#96ACAA"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_username" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="331dp"
            android:layout_height="53dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="269dp"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="268dp"
            android:layout_height="206dp"
            android:layout_marginStart="71dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="72dp"
            android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toTopOf="@+id/login_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="146dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="147dp"
            android:layout_marginBottom="226dp"
            android:text="@string/forget_password"
            android:textColor="#96ACAA"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="71dp"
            android:layout_marginTop="121dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="81dp"
            android:text="@string/no_account"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/signUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgetPassword" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="121dp"
            android:layout_marginEnd="117dp"
            android:layout_marginBottom="81dp"
            android:text="@string/sign_up"
            android:textColor="#96ACAA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/forgetPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>