<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#233248">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="123dp"
            android:layout_height="111dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="574dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="78dp"
            android:layout_marginEnd="39dp"
            android:layout_marginBottom="612dp"
            android:text="FORGOT PASSWORD"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/forget_reset_password"
            android:layout_width="325dp"
            android:layout_height="45dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="43dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="text|textPassword"
            android:textColor="#96ACAA"
            android:textColorHint="#96ACAA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/forget_reset_confirmPassword"
            android:layout_width="325dp"
            android:layout_height="45dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="62dp"
            android:layout_marginEnd="43dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="text|textPassword"
            android:textColor="#96ACAA"
            android:textColorHint="#96ACAA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_reset_password" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="300dp"
            android:layout_height="53dp"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="57dp"
            android:background="@drawable/button"
            android:text="Reset Password"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/return_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/return_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginEnd="148dp"
            android:layout_marginBottom="34dp"
            android:text="@string/return_login_text"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>